# F-Repos-Python-fastapi-sample

./: .dockerignore  .gitignore  Dockerfile  README.md  README_DOCKER部署.md  README_OpenEuler本地部署.md  README_Windows本地部署.md  alembic.ini  docker-run.sh  gunicorn.py  gunicorn常见配置.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
app/: config.py  gunicorn_start.sh  main.py  models.py  nginx.fastapi-sample.conf  prestart.sh  supervisor.fastapi-sample.conf
app/alembic/: env.py
app/alembic/versions/: 2024-08-19_db0112c6d8d2_init.py
app/models/: db.py
fastapi_sample/: main.py
