[tool.poetry]
name = "fastapi-sample"
version = "0.1.0"
description = ""
authors = ["zs <tiankong_2010@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
