[tool.poetry]
name = "fastapi-sample"
version = "0.1.0"
description = ""
authors = ["zs <tiankong_2010@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pytest = "^8.3.2"
gunicorn = "^23.0.0"
inotify = "^0.2.10"
fastapi = {extras = ["standard"], version = "^0.112.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
